improved index page css

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <div class="hero__container-logo">
           <h1 class="text-left">Hi, I'm <span>Luis</span></h1>
           <p class="text-center">Web developer & Game developer <span>Generalist </span></p>
+          <div class="text-left">
+            <a href="./index.html"><button type="button" class="cta__button"> Download CV </button></a>
+          </div>
+         
         </div>
 
         <!--Hero secondary image bootstrap carousel-->
