--- a/pages/blog.html
+++ b/pages/blog.html
@@ -78,7 +78,7 @@
           <h2>Get maximum performance with Unity Jobs system</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit praesentium velit labore, voluptatum,
             dolorem ad dicta nulla nisi ex quaerat adipisci sit ut at maiores repellat facere? Quidem, ratione nemo!</p>
-          <button type="button"> Read more </button>
+          <button class="blog__button" type="button"> Read more </button>
         </div>
 
       </div>
@@ -97,7 +97,7 @@
           <h2>Unity tasks vs coroutines, what should I use?</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit praesentium velit labore, voluptatum,
             dolorem ad dicta nulla nisi ex quaerat adipisci sit ut at maiores repellat facere? Quidem, ratione nemo!</p>
-          <button type="button"> Read more </button>
+          <button class="blog__button" type="button"> Read more </button>
         </div>
 
       </div>
@@ -116,7 +116,7 @@
           <h2>Unity shadergraph custom skybox shader</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit praesentium velit labore, voluptatum,
             dolorem ad dicta nulla nisi ex quaerat adipisci sit ut at maiores repellat facere? Quidem, ratione nemo!</p>
-          <button type="button"> Read more </button>
+          <button class="blog__button" type="button"> Read more </button>
         </div>
 
       </div>
@@ -135,7 +135,7 @@
           <h2>Unity UI toolkit vs standard canvas, what are the differences?</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit praesentium velit labore, voluptatum,
             dolorem ad dicta nulla nisi ex quaerat adipisci sit ut at maiores repellat facere? Quidem, ratione nemo!</p>
-          <button type="button"> Read more </button>
+          <button class="blog__button" type="button"> Read more </button>
         </div>
 
       </div>
