Updated footer info

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -240,7 +240,7 @@
           <div class="col-sm"></div>
 
           <div class="col-sm "> 
-          <p id="footer__author">2023 • Storm creations </p>
+          <p id="footer__author">2023 • Luis Felipe Velasquez Garcia </p>
           
           </div>
           <div class="col-sm">
