added custom java for gradients on each hero image

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -49,8 +49,8 @@
     <!-- hero title and image -->
 
     <section>
-      <div class="hero__container-image">
-        <img src="../src/images/projects/unity_related/code-snippet-thumbnail.png" alt="Hero image">
+      <div class="introductory__hero-container">
+       <div class="introductory__hero-container-image" data-url="../src/images/projects/unity_related/code-snippet-thumbnail.png"> </div>
         <h1>About me</h1>
       </div>
     </section>
@@ -188,6 +188,7 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/custom-background.js"></script>
 </body>
 
 </html>
