--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,8 +47,8 @@
 
     <!-- hero title and image -->
     <section>
-      <div class="hero__container-image">
-        <img src="../src/images/projects/blender_related/dmr-thumbnail.webp" alt="Hero image">
+      <div class="introductory__hero-container">
+       <div class="introductory__hero-container-image" data-url="../src/images/projects/blender_related/dmr-thumbnail.webp"> </div>
         <h1>Contact</h1>
       </div>
     </section>
@@ -111,6 +111,7 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/custom-background.js"></script>
 </body>
 
 </html>
