--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -187,7 +187,7 @@
       </div>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/bootstrap.bundle.min.js"></script>
   <script src="../js/custom-background.js"></script>
 </body>
 
