added new buttons and added WIX section into the projects page

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -144,7 +144,7 @@
         <img class="mb-2" src="../src/images/dummy-image.webp" alt="interest picture">
       </div>
 
-      <p>Since I was a child, I always loved all stuff related to technology, let it be computer related, or industry related, 
+      <p>Since I was a child, I always loved all stuff related to technology, let it be computer related or industry related, 
         I have always been in love with all of that topic, so as a Hobby (when I was probably around 14 or 15 years old) I learnt quite
         few things related to robotics such as arduino and electronic components where I made my own projects; They were not a big deal
         but back in the day, when I was at highschool, it helped me a lot on robotics lecture and it also allowed me to participate in science events
@@ -160,6 +160,10 @@
       
     </section>
 
+    
+    <div class="text-center mb-5 mt-5">
+      <a href="../index.html"><button class="redirection__button"> Back to homepage </button></a>
+      </div>
   </main>
 
   <!-- footer -->
