--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,7 +57,7 @@
   <main>
     <div class="divider"> </div>
 
-    <section class="centered__container-text text-center">
+    <section class="centered__container-text text-start">
       <p>If you have interest on any of my projects, want your dream game to come true or just want to ask questions feel free to contact me
         by filling the form below!
       </p> 
@@ -73,16 +73,25 @@
         <div class="contact__form-wrapper">
           <div class="contact__form-background">
             <h2>Contact info</h2>
-            <form class="contact__form-inputs" action="none">
+            <form class="contact__form-inputs" action="./contact.html">
               <input type="text" name="name" id="" placeholder="Name">
               <input type="email" name="email" id="" placeholder="E-mail">
               <textarea name="" id="" placeholder="Type here"></textarea>
+              <div class="text-start mt-2 mb-5">
+                <a href="./contact.html"><button class="send__button"> Send </button></a>
+                </div>
+              
             </form>
           </div>
         </div>
       </div>
     </section>
 
+    <div class="divider"> </div>
+
+    <div class="text-center mt-5 mb-5">
+      <a href="../index.html"><button class="redirection__button"> Back to homepage </button></a>
+      </div>
   </main>
 
  
