--- a/pages/projects.html
+++ b/pages/projects.html
@@ -182,18 +182,6 @@
         </div>
 
         <div class="projects__grid-image-container">
-          <a href="https://www.clocompany.com" target="_blank"> <img src="../src/images/projects/wordpress_related/clo-company-thumbnail.webp"
-              alt="WordPress CLO company website"> <p> CLO company </p>
-          </a>
-        </div>
-
-        <div class="projects__grid-image-container">
-          <a href="https://getback.tech" target="_blank"> <img src="../src/images/projects/wordpress_related/getback-thumbnail.webp"
-              alt="Wordpress Getback website"> <p> Getback </p>
-          </a>
-        </div>
-
-        <div class="projects__grid-image-container">
           <a href="https://tamalesdonalberto.com" target="_blank"> <img src="../src/images/projects/wordpress_related/tamales-don-alberto-thumbnail.webp"
               alt="Wordpress Tamales Don Alberto website"> <p> Tamales Don Alberto</p>
           </a>
@@ -203,6 +191,29 @@
     </section>
 
     <div class="divider"> </div>
+
+    <!-- WIX section -->
+
+    <section>
+      <div class="leftAligned__text">
+        <h2> WIX </h2>
+      </div>
+
+      <div class="projects__grid">
+
+        <div class="projects__grid-image-container">
+          <a href="https://getback.tech" target="_blank"> <img src="../src/images/projects/wordpress_related/getback-thumbnail.webp"
+              alt="WIX Getback website"> <p> Getback </p>
+          </a>
+        </div>
+
+        <div class="projects__grid-image-container">
+          <a href="https://www.clocompany.com" target="_blank"> <img src="../src/images/projects/wordpress_related/clo-company-thumbnail.webp"
+              alt="WIX CLO company website"> <p> CLO company </p>
+          </a>
+        </div>
+      </div>
+    </section>
 
     <!-- Shopify section -->
 
