Updated logos format to WEBP and modified footer alt text for logos

--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
       </div>
 
       <div class="app__icons-grid">
-        <img src="./src/images/logos/u_Logo_Small_White_RGB_1C.png" alt="Unity logo">
-        <img src="./src/images/logos/blender_logo.png" alt="Blender logo">
-        <img src="./src/images/logos/ue_Logo_stacked_unreal-engine_white.png" alt="Unreal engine logo">
-        <img src="./src/images/logos/shopify-mono-white.png" alt="Blender logo">
-        <img src="./src/images/logos/wordPress-logotype-alternative-white.png" alt="Wordpress logo">
-        <img src="./src/images/logos/wix_logo.png" alt="Blender logo">
+        <img src="./src/images/logos/u_Logo_Small_White_RGB_1C.webp" alt="Unity3D logo">
+        <img src="./src/images/logos/blender_logo.webp" alt="Blender logo">
+        <img src="./src/images/logos/ue_Logo_stacked_unreal-engine_white.webp" alt="Unreal Engine logo">
+        <img src="./src/images/logos/shopify-mono-white.webp" alt="Shopify logo">
+        <img src="./src/images/logos/wordPress-logotype-alternative-white.webp" alt="Wordpress logo">
+        <img src="./src/images/logos/wix_logo.webp" alt="Wix logo">
 
       </div>
 
@@ -212,9 +212,9 @@
           <div class="col-sm">
 
             <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3"
-                src="./src/images/logos/gitHub_Logo_White.png" alt="footer brands"></a>
+                src="./src/images/logos/gitHub_Logo_White.webp" alt="github footer logo"></a>
             <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo"
-                class="px-3" src="./src/images/logos/upwork-logo-white.png" alt="footer brands"></a>
+                class="px-3" src="./src/images/logos/upwork-logo-white.webp" alt="Upwork footer logo"></a>
 
           </div>
         </div>
