--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,7 +66,7 @@
     <!-- contact form  -->
     <section class="contact__form">
       <div class="contact__form-logo">
-        <img src="../src/images/logos/dummy_logo.png" alt="site logo">
+        <img src="../src/images/logos/dummy_logo.webp" alt="Personal logo">
       </div>
 
       <div class="contact__form-div">
@@ -110,8 +110,8 @@
           </div>
           <div class="col-sm">
             
-           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/gitHub_Logo_White.png" alt="footer brands"></a>
-           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/upwork-logo-white.png" alt="footer brands"></a>
+           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/gitHub_Logo_White.webp" alt="Github footer logo"></a>
+           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/upwork-logo-white.webp" alt="Upwork footer logo"></a>
 
           </div>
         </div>
