--- a/pages/projects.html
+++ b/pages/projects.html
@@ -256,8 +256,8 @@
           </div>
           <div class="col-sm">
             
-           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/gitHub_Logo_White.png" alt="footer brands"></a>
-           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/upwork-logo-white.png" alt="footer brands"></a>
+           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/gitHub_Logo_White.webp" alt="Github footer logo"></a>
+           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/upwork-logo-white.webp" alt="upwork footer logo"></a>
 
           </div>
         </div>
