Updated video size from projects page for mobile view

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -71,14 +71,14 @@
       <div class="projects__grid">
         <div class="projects__grid-image-container">
           <video class="projects__grid-image-container-video" loop muted autoplay>
-            <source src="../src/images/projects/unity_related/ai-battle-thumbnail.mp4" type="video/mp4">
+            <source src="../src/images/projects/unity_related/ai-battle-thumbnail.mp4" type="video/mp4" />
           </video>
           <p> AI battle camp</p>
         </div>
 
         <div class="projects__grid-image-container">
           <video class="projects__grid-image-container-video" loop muted autoplay>
-            <source src="../src/images/projects/unity_related/energy-sword-shader-thumbnail.mp4" type="video/mp4">
+            <source src="../src/images/projects/unity_related/energy-sword-shader-thumbnail.mp4" type="video/mp4" />
           </video>
           <p> Energy sword shader</p>
         </div>
@@ -96,20 +96,21 @@
 
         <div class="projects__grid-image-container">
           <video class="projects__grid-image-container-video" loop muted autoplay>
-            <source src="../src/images/projects/unity_related/bullet-tracking-thumbnail.mp4" type="video/mp4">
+            <source src="../src/images/projects/unity_related/bullet-tracking-thumbnail.mp4" type="video/mp4" />
           </video>
           <p> Bullet tracking </p>
         </div>
 
         <div class="projects__grid-image-container">
           <video class="projects__grid-image-container-video" loop muted autoplay>
-            <source src="../src/images/projects/unity_related/laser-shader-thumbnail.mp4" type="video/mp4">
+            <source src="../src/images/projects/unity_related/laser-shader-thumbnail.mp4" type="video/mp4" />
           </video>
           <p> Laser shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img
-            src="../src/images/projects/unity_related/water-depth-shader-thumbnail.webp" alt="Unity water depth shader">
+        <div class="projects__grid-image-container">
+          <img src="../src/images/projects/unity_related/water-depth-shader-thumbnail.webp"
+            alt="Unity water depth shader">
           <p> Water depth shader</p>
         </div>
 
@@ -142,7 +143,7 @@
 
         <div class="projects__grid-image-container">
           <video class="projects__grid-image-container-video" loop muted autoplay>
-            <source src="../src/images/projects/unreal_related/thermal_vision_thumbnail.mp4" type="video/mp4"/>
+            <source src="../src/images/projects/unreal_related/thermal_vision_thumbnail.mp4" type="video/mp4" />
           </video>
           <p> Thermal vision material </p>
         </div>
