stylized about me page CSS and refactored a bit of blog page and css

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           already done some exciting and unique projects focused on e-commerce, fully responsive on
           mobile plattforms.</p>
         <p>
-          If you wish to learn more about me and know about how I joined the tech world, click the button below
+          If you wish to learn more about me and know about how I joined the tech world, click the button below.
         </p>
 
         <div class="text-center">
