--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -68,8 +68,8 @@
     <section class="container text-start mt-5 mb-5">
       <div class="row ">
         <div class="col-md ">
-          <img src="../src/images/profile/profile_thumbnail.png" class="img-fluid rounded-5 mx-auto mb-4 p-3"
-            alt="profile picture">
+          <img src="../src/images/profile/profile_thumbnail.png" class="profile-picture img-fluid rounded-5 mx-auto mb-4"
+            alt="A picture of me">
 
         </div>
         <div class="col-md-6 offset-md-2 align-self-center">
@@ -93,7 +93,7 @@
 
     <section class="about__grid">
       <img src="../src/images/projects/unity_related/early-halo-project.webp" alt="early picture of my old fangame">
-      <img src="../src/images/dummy-image.webp" alt="interest picture">
+      <img src="../src/images/projects/unity_related/vehicle-physics-offroad-snapshot.webp" alt="early picture of the vehicle physics project">
     </section>
 
     <section class="centered__container-text">
@@ -121,7 +121,7 @@
 
       <p> 
         With lots of practise, I eventually managed to become a sort of generalist in the use of Unity, I learnt things like shaders, lighting, coding patterns and even rising technologies such as C# Jobs as well as
-        ECS. Later on, I decided to go ahead and try some other technologies related to my niche such as Blender and 
+        ECS (still very new to it). Later on, I decided to go ahead and try some other technologies related to my niche such as Blender and 
         Unreal Engine; the learning curve for those were very smooth, as those to programs shared very similar concepts to what I learnt using Unity.
 
         Coming to the present, for the past few seven months, I decided to put game development to a side for a while so I could find some other interest
@@ -141,7 +141,7 @@
 
     <section class="centered__container-text mb-5">
       <div class="about__grid text-center">
-        <img class="mb-2" src="../src/images/dummy-image.webp" alt="interest picture">
+        <img class="mb-5" src="../src/images/profile/robotics-project-thumbnail.jpeg" alt="Robotics project at highschool">
       </div>
 
       <p>Since I was a child, I always loved all stuff related to technology, let it be computer related or industry related, 
