--- a/pages/blog.html
+++ b/pages/blog.html
@@ -145,16 +145,21 @@
 
   <!-- bootstrap navigation buttons -->
 
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-      <div class="btn-group" role="group" aria-label="First group">
-        <button type="button" class="btn btn-primary">1</button>
-        <button type="button" class="btn btn-primary">2</button>
-        <button type="button" class="btn btn-primary">3</button>
-        <button type="button" class="btn btn-primary">4</button>
-        <button type="button" class="btn btn-primary">5</button>
-        <button type="button" class="btn btn-primary">6</button>
-      </div>
-    </div>
+  <nav aria-label="blog navigation">
+    <ul class="pagination mt-5 mb-5 justify-content-center ">
+      <li class="page-item disabled">
+        <a class="page-link">Previous</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">4</a></li>
+      <li class="page-item"><a class="page-link" href="#">5</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#">Next</a>
+      </li>
+    </ul>
+  </nav>
 
   </main>
 
