added Linked in logo to footer and refactored footer sass

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -164,29 +164,34 @@
 
   </main>
 
-  <!-- footer -->
-  <footer>
-    <div class="footer">
-      <div id="footer__edge"></div>
-      <!-- bootstrap grid for footer -->
-      <div class="container text-center mt-5 mb-0 pb-0 align-self-center" >
-        <div class="row cols-3">
-          <div class="col-sm"></div>
+ <!-- footer -->
 
-          <div class="col-sm "> 
-          <p id="footer__author">2023 • Luis Felipe Velasquez Garcia </p>
-          
-          </div>
-          <div class="col-sm">
-            
-           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/gitHub_Logo_White.webp" alt="Github footer logo"></a>
-           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/upwork-logo-white.webp" alt="Upwork footer logo"></a>
+ <footer>
+  <div class="footer">
+    <div class="footer__edge"></div>
 
-          </div>
+    <!-- bootstrap grid for footer -->
+
+    <div class="container text-center mt-5 mb-0 pb-0 align-self-center">
+      <div class="row cols-3">
+        <div class="col-sm"></div>
+
+        <div class="col-sm ">
+          <p class="footer__author">2023 • Luis Felipe Velasquez Garcia </p>
+
+        </div>
+        <div class="col-sm">
+          <a href="https://github.com/stormAster720" target="_blank"><img class="footer__logo px-3"
+              src="../src/images/logos/gitHub_Logo_White.webp" alt="Github footer logo"></a>
+          <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img
+              class="footer__logo px-3" src="../src/images/logos/upwork-logo-white.webp" alt="Upwork footer logo"></a>
+          <a href="https://www.linkedin.com/in/luis-felipe-velasquez-garcia-217128164/" target="_blank"><img
+              class="footer__logo px-3" src="../src/images/logos/in-white-128.webp" alt="LinkedIn footer logo"></a>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
   <script src="../js/bootstrap.bundle.min.js"></script>
  <script src="../js/custom-background.js"></script>
