Fixed responsive alignment of footer

--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
 
       <div class="container text-center mt-5 mb-0 pb-0 align-self-center">
         <div class="row cols-3">
-          <div class="col-sm"></div>
+          <div class="col-xl"></div>
 
-          <div class="col-sm ">
+          <div class="col-xl ">
             <p class="footer__author">2023 • Luis Felipe Velasquez Garcia </p>
 
           </div>
-          <div class="col-sm">
+          <div class="col-xl">
             <a href="https://github.com/stormAster720" target="_blank"><img class="footer__logo px-3"
                 src="./src/images/logos/gitHub_Logo_White.webp" alt="Github footer logo"></a>
             <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img
