Added custom javascript for skills section on home page

--- a/index.html
+++ b/index.html
@@ -149,17 +149,23 @@
       </div>
 
       <div class="app__icons-grid">
-        <img src="./src/images/logos/u_Logo_Small_White_RGB_1C.webp" alt="Unity3D logo">
-        <img src="./src/images/logos/blender_logo.webp" alt="Blender logo">
-        <img src="./src/images/logos/ue_Logo_stacked_unreal-engine_white.webp" alt="Unreal Engine logo">
-        <img src="./src/images/logos/shopify-mono-white.webp" alt="Shopify logo">
-        <img src="./src/images/logos/wordPress-logotype-alternative-white.webp" alt="Wordpress logo">
-        <img src="./src/images/logos/wix_logo.webp" alt="Wix logo">
+        <img src="./src/images/logos/u_Logo_Small_White_RGB_1C.webp" alt="Unity3D logo"
+          data-description="With over 6 years of experience using Unity3D, I have developed a solid understanding of the engine that allows me to provide a valuable skillset for my clients, which is characterized by a seamless blend of technical expertise, creative problem-solving, and a deep understanding of game development principles. With that said, here is a list of few of my skills: \n\n -Problem solving skills for general engine problems and code problems / bugs.\n -Solid understanding of Unity interface and it's functionalities. \n-Advanced knowledge of coding for implementing efficient and well commented, modular and reausable code for easy mantenance and performance.\n -C# job system understanding for making efficient multithreaded code for expensive tasks alogn with the use of the burst compiler.\n -Unity intermediate shadergraph knowledge for making dynamic object or screen shaders (URP and HDRP).">
+        <img src="./src/images/logos/blender_logo.webp" alt="Blender logo"
+          data-description="With a solid background of over 3 years in utilizing Blender, I have honed my skills to an intermediate level, particularly in the realm of 3D modeling for video games and creating breathtaking renderings. Here is a glimpse of my skill set: \n\n -Knowledge on making hard surface models both highpoly and lowpoly based on reference images. \n-Knowledge on 3D model UV unwraping for texturing in third a party software. \n-Knowledge on 3D model rendering using Blender cycles.">
+        <img src="./src/images/logos/ue_Logo_stacked_unreal-engine_white.webp" alt="Unreal Engine logo"
+          data-description="With over a year of hands-on experience utilizing both Unreal Engine 4 and the latest Unreal Engine 5, I have seamlessly integrated the knowledge and expertise gained from working extensively with Unity3D. This unique fusion of skills empowers me to create visually striking and immersive experiences, leveraging Unreal Engine's cutting-edge graphical capabilities. Additionally, I proficiently leverage the engine's robust built-in tools to develop efficient and robust in-game functionality. As a result, I bring a comprehensive set of skills to the table, including: \n\n -Intermediate knowledge on using the material editor for making dynamic postprocessing materials or object materials. \n-Knowledge on using Nanite and Lumen for making realistic looking enviroments. \n-Knowledge on blueprints for making gameplay codes.">
+        <img src="./src/images/logos/shopify-mono-white.webp" alt="Shopify logo"
+          data-description="With over 3 months of experience of using Shopify, I have managed to learn enough of it for being able to launch functional e-commerce stores with custom functionalites for product purchasimg and frontend customizing; Here is a list of my skills: \n\n -Basic to intermediate knowledge on Shopify Liquid languaje. \n-Knowledge for editing Shopify themes code and implement custom functionallities for both backend and frontend. \n-Solid understanding of web front end for building user friendly pages or interfaces. \n-General problem solving skills for javascript errors or HTML errors.">
+        <img src="./src/images/logos/wordPress-logotype-alternative-white.webp" alt="Wordpress logo"
+          data-description="Description for Wordpress">
+        <img src="./src/images/logos/wix_logo.webp" alt="Wix logo" data-description="Description for Wix">
 
       </div>
 
       <div class="centered__container-text">
-        <p>With my background in the technologies listed above, I have honed my skills to create captivating games,
+        <p id="app__icons-text"><span>(Click an app image to watch a skill description of the specified app).</span><br>
+          With my background in the technologies listed above, I have honed my skills to create captivating games,
           stunning websites, and seamless
           e-commerce platforms with unique functionalities. From making realistic games with Unity3D and Unreal Engine
           to designing sleek
@@ -230,6 +236,7 @@
 
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/custom-background.js"></script>
+  <script src="./js/skilltest.js"></script>
 </body>
 
 </html>
