fixed bootstrap map warning on console and renamed skill section script of home page

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/custom-background.js"></script>
-  <script src="./js/skilltest.js"></script>
+  <script src="./js/skills-picker.js"></script>
 </body>
 
 </html>
