--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Full blog catalog of Luis Felipe, know curiosities and useful tips for game development or web development ">
+  <meta name="description"
+    content="Full blog catalog of Luis Felipe, know curiosities and useful tips for game development or web development ">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="shortcut icon" href="../src/images/icons/favicon.ico" type="image/x-icon">
@@ -16,11 +17,12 @@
   <header>
 
     <!-- bootstrap navbar -->
-    
+
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+          aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbar">
@@ -48,7 +50,8 @@
     <!-- hero title and image -->
     <section>
       <div class="introductory__hero-container">
-       <div class="introductory__hero-container-image" data-url="../src/images/projects/unity_related/minecraft-project-thumbnail.webp"> </div>
+        <div class="introductory__hero-container-image"
+          data-url="../src/images/projects/unity_related/minecraft-project-thumbnail.webp"> </div>
         <h1>Blog</h1>
       </div>
     </section>
@@ -67,7 +70,7 @@
     <!-- blog entries -->
 
     <!-- post 1 -->
-    
+
     <section class="blog__grid">
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
@@ -144,57 +147,57 @@
 
     <div class="slim__divider"> </div>
 
-  <!-- bootstrap navigation buttons -->
+    <!-- bootstrap navigation buttons -->
 
-  <nav aria-label="blog navigation">
-    <ul class="pagination mt-5 mb-5 justify-content-center ">
-      <li class="page-item disabled">
-        <a class="page-link">Previous</a>
-      </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">4</a></li>
-      <li class="page-item"><a class="page-link" href="#">5</a></li>
-      <li class="page-item">
-        <a class="page-link" href="#">Next</a>
-      </li>
-    </ul>
-  </nav>
+    <nav aria-label="blog navigation">
+      <ul class="pagination mt-5 mb-5 justify-content-center ">
+        <li class="page-item disabled">
+          <a class="page-link">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">4</a></li>
+        <li class="page-item"><a class="page-link" href="#">5</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#">Next</a>
+        </li>
+      </ul>
+    </nav>
 
   </main>
 
- <!-- footer -->
+  <!-- footer -->
 
- <footer>
-  <div class="footer">
-    <div class="footer__edge"></div>
+  <footer>
+    <div class="footer">
+      <div class="footer__edge"></div>
 
-    <!-- bootstrap grid for footer -->
+      <!-- bootstrap grid for footer -->
 
-    <div class="container text-center mt-5 mb-0 pb-0 align-self-center">
-      <div class="row cols-3">
-        <div class="col-xl"></div>
+      <div class="container text-center mt-5 mb-0 pb-0 align-self-center">
+        <div class="row cols-3">
+          <div class="col-xl"></div>
 
-        <div class="col-xl ">
-          <p class="footer__author">2023 • Luis Felipe Velasquez Garcia </p>
+          <div class="col-xl ">
+            <p class="footer__author">2023 • Luis Felipe Velasquez Garcia </p>
 
-        </div>
-        <div class="col-xl">
-          <a href="https://github.com/stormAster720" target="_blank"><img class="footer__logo px-3"
-              src="../src/images/logos/gitHub_Logo_White.webp" alt="Github footer logo"></a>
-          <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img
-              class="footer__logo px-3" src="../src/images/logos/upwork-logo-white.webp" alt="Upwork footer logo"></a>
-          <a href="https://www.linkedin.com/in/luis-felipe-velasquez-garcia-217128164/" target="_blank"><img
-              class="footer__logo px-3" src="../src/images/logos/in-white-128.webp" alt="LinkedIn footer logo"></a>
+          </div>
+          <div class="col-xl">
+            <a href="https://github.com/stormAster720" target="_blank"><img class="footer__logo px-3"
+                src="../src/images/logos/gitHub_Logo_White.webp" alt="Github footer logo"></a>
+            <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img
+                class="footer__logo px-3" src="../src/images/logos/upwork-logo-white.webp" alt="Upwork footer logo"></a>
+            <a href="https://www.linkedin.com/in/luis-felipe-velasquez-garcia-217128164/" target="_blank"><img
+                class="footer__logo px-3" src="../src/images/logos/in-white-128.webp" alt="LinkedIn footer logo"></a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
   <script src="../js/bootstrap.bundle.min.js"></script>
- <script src="../js/custom-background.js"></script>
+  <script src="../js/custom-background.js"></script>
 </body>
 
 </html>
