heavily reduced sass boiler plate scss

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -50,7 +50,8 @@
 
     <section>
       <div class="introductory__hero-container">
-       <div class="introductory__hero-container-image" data-url="../src/images/projects/unity_related/code-snippet-thumbnail.png"> </div>
+        <div class="introductory__hero-container-image"
+          data-url="../src/images/projects/unity_related/code-snippet-thumbnail.png"> </div>
         <h1>About me</h1>
       </div>
     </section>
@@ -74,7 +75,8 @@
         </div>
         <div class="col-md-6 offset-md-2 align-self-center mx-auto">
           <p class="mx-3  fs-5 "> Hey there, that's me!, as I mentioned before, my name is Luis Felipe Velasquez Garcia
-            and I am a 19 years old teenager born (and currently living in) Colombia who's passionate for learning modern technologies 
+            and I am a 19 years old teenager born (and currently living in) Colombia who's passionate for learning
+            modern technologies
             either for making games or for doing websites. I am a self taught game developer
             who has been learning
             this subject since I was 13 years old, and currently I am on my way to become a full stack web developer!
@@ -93,7 +95,8 @@
 
     <section class="about__grid">
       <img src="../src/images/projects/unity_related/early-halo-project.webp" alt="Early picture of my old fangame">
-      <img src="../src/images/projects/unity_related/vehicle-physics-offroad-snapshot.webp" alt="Early picture of the vehicle physics project">
+      <img src="../src/images/projects/unity_related/vehicle-physics-offroad-snapshot.webp"
+        alt="Early picture of the vehicle physics project">
     </section>
 
     <section class="centered__container-text">
@@ -105,30 +108,44 @@
         through the research time, I decided to start learning how to do very simple games using Unity3D.</p>
 
       <p>
-        At that time, it was a very difficult task for me, because I was living on an area where there was hardly ever good enough
-        network to either download a software or open youtube videos, it would generally take a couple of minutes to do such things or the internet
+        At that time, it was a very difficult task for me, because I was living on an area where there was hardly ever
+        good enough
+        network to either download a software or open youtube videos, it would generally take a couple of minutes to do
+        such things or the internet
         would completly disconnect
-        (also the fact that I had a very old and fauly laptop which would suddenly turn off due to overheating and was also very limited in storage).
-        Eventually I was able to over come those problems and started to develop my project which was essentially a package created by someone else but it 
-        was heavily modified according to my needs. I was able to present my project in time while also achieving a good grade.
+        (also the fact that I had a very old and fauly laptop which would suddenly turn off due to overheating and was
+        also very limited in storage).
+        Eventually I was able to over come those problems and started to develop my project which was essentially a
+        package created by someone else but it
+        was heavily modified according to my needs. I was able to present my project in time while also achieving a good
+        grade.
       </p>
 
       <p>
-        Fast forward to 2017, I was already able to code on my own without reading blogs or watching videos (at this point, I already had a more
-        suitable laptop for what I was doing) and I also had a bit of a reputation because of a project I was doing at a time (a Halo fangame which
-         I eventually remastered but then stoped working on it as I moved it to Unreal Engine).
+        Fast forward to 2017, I was already able to code on my own without reading blogs or watching videos (at this
+        point, I already had a more
+        suitable laptop for what I was doing) and I also had a bit of a reputation because of a project I was doing at a
+        time (a Halo fangame which
+        I eventually remastered but then stoped working on it as I moved it to Unreal Engine).
       </p>
 
-      <p> 
-        With lots of practise, I eventually managed to become a sort of generalist in the use of Unity, I learnt things like shaders, lighting, coding patterns and even rising technologies such as C# Jobs as well as
-        ECS (still very new to it). Later on, I decided to go ahead and try some other technologies related to my niche such as Blender and 
-        Unreal Engine; the learning curve for those were very smooth, as those to programs shared very similar concepts to what I learnt using Unity.
+      <p>
+        With lots of practise, I eventually managed to become a sort of generalist in the use of Unity, I learnt things
+        like shaders, lighting, coding patterns and even rising technologies such as C# Jobs as well as
+        ECS (still very new to it). Later on, I decided to go ahead and try some other technologies related to my niche
+        such as Blender and
+        Unreal Engine; the learning curve for those were very smooth, as those to programs shared very similar concepts
+        to what I learnt using Unity.
 
-        Coming to the present, for the past few seven months, I decided to put game development to a side for a while so I could find some other interest
-        on another niche, so that's when I got into the world of web development. I started as a self taught web developer as a freelancer using WIX for doing customized user experience
-        (use javascript to customize an already built in feature into wix) and then eventually moved to more advanced programs to do the same thing while also
-        learning css and html. It wasn't until a month ago where I decided to buy a one year course for becoming a full stack web devloper as now days some companies 
-        out there prefer somebody with a proof of expertise rather than self taught people. 
+        Coming to the present, for the past few seven months, I decided to put game development to a side for a while so
+        I could find some other interest
+        on another niche, so that's when I got into the world of web development. I started as a self taught web
+        developer as a freelancer using WIX for doing customized user experience
+        (use javascript to customize an already built in feature into wix) and then eventually moved to more advanced
+        programs to do the same thing while also
+        learning css and html. It wasn't until a month ago where I decided to buy a one year course for becoming a full
+        stack web devloper as now days some companies
+        out there prefer somebody with a proof of expertise rather than self taught people.
       </p>
     </section>
 
@@ -140,35 +157,43 @@
     </div>
 
 
-      <div class="about__grid text-center">
-        <img src="../src/images/profile/robotics-project-thumbnail.jpeg" alt="Robotics project at highschool">
-      </div>
-      
-      <section class="centered__container-text mb-5">
-      <p>Since I was a child, I always loved all stuff related to technology, let it be computer related or industry related, 
-        I have always been in love with all of that topic, so as a Hobby (when I was probably around 14 or 15 years old) I learnt quite
-        few things related to robotics such as arduino and electronic components where I made my own projects; They were not a big deal
-        but back in the day, when I was at highschool, it helped me a lot on robotics lecture and it also allowed me to participate in science events
-        related to robotics. 
+    <div class="about__grid text-center">
+      <img src="../src/images/profile/robotics-project-thumbnail.jpeg" alt="Robotics project at highschool">
+    </div>
 
-        I graduated from highschool in 2019, and since then I attended 2 universities, which I droped off, the reason behind that was, 1, during the 
-        pandimic it became nearly imposible to learn from remote, as nor the university and students were prepared for that, and as the second university,
-        the carreer turned out to not be what it said it was; It was a career related to animation and videogames, however, your ending bachelor degree would 
-        be conceptual artist, which made no sense at all and also the career expected you to have from medium to advanced knowledge in drawing, which I did not
+    <section class="centered__container-text mb-5">
+      <p>Since I was a child, I always loved all stuff related to technology, let it be computer related or industry
+        related,
+        I have always been in love with all of that topic, so as a Hobby (when I was probably around 14 or 15 years old)
+        I learnt quite
+        few things related to robotics such as arduino and electronic components where I made my own projects; They were
+        not a big deal
+        but back in the day, when I was at highschool, it helped me a lot on robotics lecture and it also allowed me to
+        participate in science events
+        related to robotics.
+
+        I graduated from highschool in 2019, and since then I attended 2 universities, which I droped off, the reason
+        behind that was, 1, during the
+        pandimic it became nearly imposible to learn from remote, as nor the university and students were prepared for
+        that, and as the second university,
+        the carreer turned out to not be what it said it was; It was a career related to animation and videogames,
+        however, your ending bachelor degree would
+        be conceptual artist, which made no sense at all and also the career expected you to have from medium to
+        advanced knowledge in drawing, which I did not
         have at all.
 
       </p>
-      
+
     </section>
 
     <div class="text-center mb-5 mt-5">
       <a href="../index.html"><button class="redirection__button"> Back to homepage </button></a>
-      </div>
+    </div>
   </main>
 
-   <!-- footer -->
+  <!-- footer -->
 
-   <footer>
+  <footer>
     <div class="footer">
       <div class="footer__edge"></div>
 
