--- a/pages/contact.html
+++ b/pages/contact.html
@@ -73,11 +73,11 @@
         <img src="../src/images/logos/dummy_logo.webp" alt="Personal logo">
       </div>
 
-      <div class="contact__form-div">
-        <div class="contact__form-wrapper">
-          <div class="contact__form-background">
+      <div class="contact__form-inner">
+        <div class="contact__form-inner-wrapper">
+          <div class="contact__form-inner-background">
             <h2>Contact info</h2>
-            <form class="contact__form-inputs" action="./contact.html">
+            <form class="contact__form-inner-inputs" action="./contact.html">
               <input type="text" name="name" id="" placeholder="Name">
               <input type="email" name="email" id="" placeholder="E-mail">
               <textarea name="" id="" placeholder="Type here"></textarea>
