Removed blog, contact page and added download link for CV

--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
             <li class="nav-item px-4">
               <a class="nav-link" href="./pages/about-me.html">About me</a>
             </li>
-            <li class="nav-item px-4">
+            
+            <!-- <li class="nav-item px-4">
               <a class="nav-link" href="./pages/blog.html">Blog</a>
             </li>
             <li class="nav-item px-4">
               <a class="nav-link" href="./pages/contact.html">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -53,7 +54,7 @@
           <h1 class="text-left">Hi, I'm <span>Luis</span></h1>
           <p class="text-center">Web developer & Game developer <span>Generalist </span></p>
           <div class="text-left">
-            <a href="./index.html"><button type="button" class="cta__button"> Download CV </button></a>
+            <a href="./src/files/Luis Felipe Velasquez Garcia CV.pdf" download=""><button type="button" class="cta__button"> Download CV </button></a>
           </div>
 
         </div>
@@ -181,7 +182,7 @@
 
     <!-- Contact section -->
 
-    <div class="divider"> </div>
+    <!-- <div class="divider"> </div>
 
     <section>
       <div class="leftAligned__text">
@@ -201,7 +202,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
 
   </main>
 
