--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,12 +36,12 @@
             <li class="nav-item px-4">
               <a class="nav-link" href="../pages/about-me.html">About me</a>
             </li>
-            <li class="nav-item px-4">
+            <!-- <li class="nav-item px-4">
               <a class="nav-link" href="../pages/blog.html">Blog</a>
             </li>
             <li class="nav-item px-4">
               <a class="nav-link active" aria-current="page" href="../pages/contact.html">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
